# libskycoin

./: .clang-format  .gitignore  .gitmodules  .golangci.libcgo.yml  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  output.txt
lib/curl/: CMakeLists.txt  README.md  install_lib_curl.sh
lib/curl/api/: DefaultAPI.c  DefaultAPI.h
lib/curl/c/: CMakeCache.txt  CTestTestfile.cmake  Cookies  DartConfiguration.tcl  Makefile  Network Persistent State  cmake_install.cmake  machineid  storage.json
lib/curl/c/Backups/: workspaces.json
lib/curl/c/Cache/: 0031005aa66b1b29_0  024851657a48ee65_0  0c2f3da692165b1d_0  0c3b41e64f42e7a6_0  10ae03a6cdf75240_0  10cfb18b39808e6c_0  15fee6f72a427206_0  16b7d5587f7cef90_0  16f0d16b1f06ea20_0  1bd1d6faa1fd3ca7_0  1c089b90592127df_0  209b3f441e46860c_0  24707164e876ae9c_0  29c3a3f737a1f263_0  3696f515cdc5d318_0  385758679872da56_0  4274751ba924bdb4_0  432673bbd8a47e86_0  475dc8e2ea8f828a_0  49bbc9cf8bef79fb_0  4f9501f6a0c9b625_0  603caf39b820661c_0  638c636de9a7f773_0  64f450ed4dd7a030_0  66cc2bc0efb0646f_0  760d047e33e1682d_0  7bf300d93fcf450f_0  7fdc67ab6dbdd3e3_0  8a265abd566c1856_0  8de1e1f41b1691e2_0  90fcbc735c7889bb_0  91cb269d7a41dfad_0  920eb970dc6c3764_0  a2a583ed0441a450_0  a86418e567c8f63c_0  aaeda4f4cbd01ab4_0  abfadfc6d4cdcccf_0  adff3632c6ed3a9b_0  b12dec6601605006_0  b1869d03572e8144_0  (+16 more)
lib/curl/c/CachedExtensions/: builtin
lib/curl/c/GPUCache/: data_0  data_1  index
lib/curl/c/api/: DefaultAPI.c  DefaultAPI.h
lib/curl/c/include/: keyValuePair.h.gch
lib/curl/c/model/: apiv1exploreraddress_inputs.c  apiv1exploreraddress_outputs.h  apiv1exploreraddress_status.c  apiv1exploreraddress_status.h  apiv1pending_txs_transaction.c  apiv1pending_txs_transaction.h  apiv1pending_txsverbose_transaction.c  apiv1pending_txsverbose_transaction.h  apiv1pending_txsverbose_transaction_inputs.c  apiv1pending_txsverbose_transaction_inputs.h  apiv1transactionsverbose_txn.c  apiv1transactionsverbose_txn.h  apiv1transactionsverbose_txn_status.c  apiv1transactionsverbose_txn_status.h  apiv1wallets_entries.c  apiv1wallets_entries.h  apiv1wallettransaction_hours_selection.c  apiv1wallettransaction_hours_selection.h  apiv1wallettransaction_to.c  apiv1wallettransaction_to.h  apiv1wallettransaction_wallet.c  apiv1wallettransaction_wallet.h  apiv1wallettransaction_wallet.h.gch  inline_object.c  inline_object.h  inline_response_200_2.c  inline_response_200_3_unconfirmed_verify_transaction.h  inline_response_200_4.h  inline_response_200_5.c  inline_response_200_5.h  inline_response_200_6.c  inline_response_200_6.h  inline_response_200_7.c  inline_response_200_7.h  inline_response_200_7_data.c  inline_response_200_7_data.h  inline_response_200_8.c  inline_response_200_8.h  inline_response_200_9.c  inline_response_200_9.h  (+3 more)
lib/curl/cClient/: README.md
lib/curl/cClient/api/: DefaultAPI.c
lib/curl/cClient/src/: apiClient.c
lib/curl/include/: apiClient.h
lib/curl/model/: _api_v1_explorer_address_inputs.c  _api_v1_explorer_address_inputs.h  _api_v1_explorer_address_outputs.c  _api_v1_explorer_address_outputs.h  _api_v1_explorer_address_status.c  _api_v1_explorer_address_status.h  _api_v1_pending_txs_transaction.c  _api_v1_pending_txs_transaction.h  _api_v1_pending_txs_transaction_outputs.c  _api_v1_pending_txs_transaction_outputs.h  _api_v1_pending_txs_verbose_transaction.c  _api_v1_wallet_transaction_hours_selection.c  _api_v1_wallet_transaction_hours_selection.h  _api_v1_wallet_transaction_to.c  _api_v1_wallet_transaction_to.h  _api_v1_wallet_transaction_wallet.c  _api_v1_wallet_transaction_wallet.h  _api_v1_wallets_entries.c  _api_v1_wallets_entries.h  _api_v1_wallets_meta.c  _api_v1_wallets_meta.h  address.c  address.h  block_schema.c  block_schema.h  block_schema_body.h  block_verbose_schema.c  block_verbose_schema.h  block_verbose_schema_body.h  block_verbose_schema_header.c  block_verbose_schema_header.h  inline_object.c  inline_object.h  inline_response_200.c  inline_response_200.h  inline_response_200_1.c  inline_response_200_1.h  inline_response_200_10.c  inline_response_200_10.h  inline_response_200_10_data.c  (+73 more)
lib/curl/src/: apiClient.c
lib/skyhwd/: CMakeLists.txt  README.md
lib/skyhwd/api/: DefaultAPI.c  DefaultAPI.h
lib/skyhwd/include/: apiClient.h
lib/skyhwd/model/: apply_settings_request.c  apply_settings_request.h  check_message_signature_request.c  check_message_signature_request.h  configure_pin_code_request.c  configure_pin_code_request.h  csrf_response.c  csrf_response.h  features_response.c  features_response.h  features_response_data.c  features_response_data.h  generate_addresses_request.c  generate_addresses_request.h  generate_addresses_response.c  generate_addresses_response.h  generate_mnemonic_request.c  generate_mnemonic_request.h  http_error_response.c  http_error_response.h  http_error_response_error.c  http_error_response_error.h  http_success_response.c  http_success_response.h  inline_response_200.c  inline_response_200.h  passphrase_request.c  passphrase_request.h  pin_matrix_request.c  pin_matrix_request.h  recovery_request.c  recovery_request.h  set_mnemonic_request.c  set_mnemonic_request.h  sign_message_request.c  sign_message_request.h  sign_message_response.c  sign_message_response.h  transaction_input.c  transaction_input.h  (+12 more)
lib/skyhwd/src/: apiClient.c
pepe/: CMakeLists.txt  README.md
pepe/api/: DefaultAPI.c  DefaultAPI.h
pepe/include/: apiClient.h
pepe/model/: _api_v1_pending_txs_verbose_transaction.h  block_schema_body.c  block_verbose_schema_body.c  inline_response_200.h  inline_response_200_1.h  inline_response_200_11.h  inline_response_200_12.c  inline_response_200_13.h  inline_response_200_2.h  inline_response_200_3.c  inline_response_200_6.c  inline_response_200_6.h  inline_response_200_7.h  inline_response_200_9.c  inline_response_default.h  multi_key.c  multi_key.h  multi_key_data_key2.c  multi_key_data_key2.h  single_key.c  single_key.h  transaction_status.h  transaction_verbose.c
pepe/pepe/: CMakeCache.txt  Makefile  cmake_install.cmake
pepe/src/: apiClient.c
(+595 files in other folders)
